--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -97,7 +97,7 @@ main {
 		display: inline-block;
 		padding: .25rem .5em;
 		margin-top: 4px;
-		font-size: 1.5rem;
+		font-size: 1rem; // 1.5rem;
 		font-family: "base-mono-wide", monospace !important;
 		font-weight: 700;
 		line-height: 1;
@@ -107,6 +107,23 @@ main {
 		border: 2px solid hsla(186,80%,70%,1);
 		&:hover, &:focus {
 			background-color: transparent !important;
+		}
+	}
+	@media screen and (max-width: 767px) {
+		a {
+			width: 100% !important;
+			text-align: center;
+		}
+	}
+	@media screen and (min-width: 768px) {
+		a {
+			margin: 0 !important;
+			font-size: 1.25rem !important;
+		}
+	}
+	@media screen and (min-width: 1024px) {
+		a {
+			font-size: 1.5rem !important;
 		}
 	}
 }
