Add author credit image to blog post
- NB: most of the code already existed, although adjusted Liquid logic
  for how the data actually exists now.

- Had set this block to 'display: none' because the cropped images
  didn't exist yet. (See #188.)

--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -70,9 +70,9 @@ layout: default
         <div class="post-credits__author">
           <!-- display person pic if exists -->
           {% for image in site.static_files %}
-            {% if image.path contains page.author %}
+            {% if image.path contains page.author and image.path contains 'cropped' %}
                 <div class="post-author__image">
-                  <img src="{{ site.baseurl }}/assets/img/people/{{ page.author }}.jpg" alt="{{ author.name }}">
+                  <img src="{{ site.baseurl }}/assets/img/people/cropped/{{ page.author }}.jpg" alt="{{ author.name }}">
                 </div>
             {% endif %}
           {% endfor %}
