Add padding to bottom of blog post wrapper
- Was running up right against the footer; added padding of
  1 body line height

--- a/assets/css/_sass/_blog-post.scss
+++ b/assets/css/_sass/_blog-post.scss
@@ -18,8 +18,10 @@
 .post-wrapper {
 	position: relative;
 	padding: 0em 4.167%;
+	padding-bottom: 3rem;
 	@media screen and (min-width: 600px) {
 		padding: 0em 8.33%;
+		padding-bottom: 3rem;
 	}
 	@media screen and (min-width: 1024px) {
 		max-width: calc(800px + 16.67%);
