Fix first-letter styling inheritance issues
- Didn't have it specific enough, so it special styled first letter
  of first paragraph in all descendents, not just literally 1st child

- Mostly affected list items, whose contents are wrapped in <p>

--- a/assets/css/_sass/_blog-post.scss
+++ b/assets/css/_sass/_blog-post.scss
@@ -134,7 +134,7 @@
 			max-width: 100%;
 		}
 	}
-	p:first-of-type {
+	& > p:first-of-type {
 		&::first-letter {
 			float: left;
 			padding-right: .5rem;
