--- a/assets/css/_sass/_blog-post.scss
+++ b/assets/css/_sass/_blog-post.scss
@@ -70,10 +70,6 @@
 	font-family: "base-mono-narrow", monospace;
 	font-weight: 200;
 	line-height: 1;
-	a {
-		font-family: "base-mono-narrow", monospace !important;
-//		border-bottom: 2px solid transparent !important;
-	}
 }
 
 .post-meta__quote {
@@ -90,6 +86,9 @@
 .post-meta__author {
 	display: inline-block;
 	padding-right: 1em;
+	a {
+		font-family: "Raleway", sans-serif;
+	}
 //	font-weight: 700 !important;
 }
 
@@ -110,7 +109,6 @@
 }
 
 .post-meta__categories, .post-meta__tags {
-//	display: none;
 	margin-top: 2px;
 	a {
 		color: rgba(0,0,0,.5) !important;
