Set blog post body font size to 18px if screen >768px
- Tablet breakpoint

--- a/assets/css/_sass/_blog-post.scss
+++ b/assets/css/_sass/_blog-post.scss
@@ -142,6 +142,10 @@
 			color: hsla(186,80%,70%,1);
 		}
 	}
+	@media screen and (min-width: 768px) {
+		font-size: 1.125rem;
+	}
+}
 
 // removes 1st letter styling
 // if 1st para = announcement
