--- a/assets/css/_sass/_blog-post.scss
+++ b/assets/css/_sass/_blog-post.scss
@@ -65,6 +65,9 @@
 	grid-area: meta;
 	margin-bottom: .5rem; // + 1rem default <p> spacing = line hieght
 	color: hsl(186,1%,25%);
+	@media screen and (min-width: 768px) {
+		font-size: 1.125rem;
+	}
 }
 
 [class*="post-meta__"] {
