--- a/assets/css/_sass/_blog-post.scss
+++ b/assets/css/_sass/_blog-post.scss
@@ -243,13 +243,16 @@
 // so am combining this class w/ JS to mimic headings
 .post__section-title {
 	position: relative;
-	font-size: 1.5em;
+	font-size: 1.75em;
 	font-family: "Oswald", sans-serif;
 	line-height: 1;
-	margin-top: .75em;
-	margin-bottom: .625em;
+	margin-top: .5em;
+	margin-bottom: .5em;
+	padding-bottom: calc(.25em - 2px);
+	color: hsl(186,1%,25%);
+	border-bottom: 2px solid hsl(186,80%,70%);
 	strong {
-		font-weight: 700;
+		font-weight: 600;
 	}
 }
 
