--- a/assets/css/_sass/_blog-post.scss
+++ b/assets/css/_sass/_blog-post.scss
@@ -66,59 +66,36 @@
 
 .post__metadata {
 	grid-area: meta;
-	margin-bottom: .5rem; // + 1rem default <p> spacing = line hieght
+	padding-bottom: 1em;
 	color: hsl(186,1%,25%);
-	@media screen and (min-width: 768px) {
-		font-size: 1.125rem;
-	}
 }
 
 [class*="post-meta__"] {
 	position: relative;
 	font-family: "base-mono-narrow", monospace;
 	font-weight: 200;
-	line-height: 1;
+	line-height: 1.5;
+	a {
+		font-family: "base-mono-narrow", monospace !important;
+		font-weight: 200;
+		color: hsl(186,1%,25%);
+	}
 }
 
 .post-meta__quote {
-//	display: none;
 	margin-bottom: 1em;
 	font-size: 1.5rem;
-//	font-style: italic;
-	line-height: 1;
 	font-family: "Raleway", sans-serif;
 	font-weight: 900;
+	line-height: 1;
 	color: rgba(0,0,0,.5);
 }
 
 .post-meta__author {
-	display: inline-block;
-	padding-right: 1em;
-	a {
-		font-family: "Raleway", sans-serif;
-		color: hsl(186,1%,25%);
-	}
-//	font-weight: 700 !important;
+
 }
 
-.post-meta__date {
-	@media screen and (min-width: 600px) {
-		display: inline-block;
-		padding-left: 2em;
-		color: rgba(0,0,0,.5);
-		&::before {
-			content: '//';
-			position: absolute;
-			left: 0;
-			top: 0;
-			font-weight: bold;
-			color: hsla(186,80%,70%,1);
-		}
-	}
-}
-
-.post-meta__categories, .post-meta__tags {
-	margin-top: 2px;
+.post-meta__categories {
 	a {
 		color: rgba(0,0,0,.5) !important;
 	}
