Constrain max-width of <pre> text blocks
- Has line wrapping turned off by default so had to add manually
  so code blocks don't overflow the layout

--- a/assets/css/_sass/_blog-post.scss
+++ b/assets/css/_sass/_blog-post.scss
@@ -143,6 +143,11 @@
 		padding-left: calc(1.5em - 2px);
 		border-left: 2px solid hsla(186,80%,70%,1);
 	}
+	// # code
+	pre {
+		max-width: 100%;
+		white-space: pre-wrap;
+	}
 	// # lists
 	ol, ul {
 		position: relative;
