Replace ' - ' with ': ' in blog titles; add aria-label + title attr to link
- Couldn't figure out how to reasonably get the post preview titles to
  look like links interactively without them looking really weird/bad
  so am setting the title attribute right now so it at least responds
  when you hover

--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -8,7 +8,7 @@ layout: default
 
   <div class="post-main-content">
 
-    <div class="post__big-title"><span aria-label="page type">Blog //</span>{{ page.title }}</div>
+    <div class="post__big-title"><span aria-label="page type">Blog //</span>{{ page.title | replace: ' - ', ': ' }}</div>
 
     <!-- make span an <a> tag to blog home and put h1 tags around page.title w/ the font styles when finalizing -->
 
