Create people gallery SCSS file; import into main stylesheet

--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -33,6 +33,7 @@ main {
 @import "progress-tracker"; // only include pre-v1.0.0
 @import "blog-post";
 @import "person";
+@import "people";
 @import "events";
 @import "blog";
 @import "flexible-nav";
