Add basic padding & positioning for people content wrappers
- Media queries included in padding

--- a/assets/css/_sass/_people.scss
+++ b/assets/css/_sass/_people.scss
@@ -1,7 +1,7 @@
 /* People Gallery Page: */
 
 .people-wrapper {
-
+	position: relative;
 }
 
 /* Header: */
@@ -21,13 +21,26 @@
 /* Main content: */
 
 .people-main-content {
-
+	position: relative;
+	padding: 0 4.167%;
+	@media screen and (min-width: 600px) {
+		padding: 0 8.33%;
+		padding-top: 3rem; // 2 line heights
+	}
+	@media screen and (min-width: 768px) {
+		padding: 0 4.167%;
+		padding-top: 3rem; // 2 line heights
+	}
+	@media screen and (min-width: 1024px) {
+		padding: 0 8.33%;
+		padding-top: 3rem; // 2 line heights
+	}
 }
 
 /* Staff: */
 
 .people__staff {
-
+	position: relative;
 }
 
 .people-staff__title {
