--- a/assets/css/_sass/_people.scss
+++ b/assets/css/_sass/_people.scss
@@ -1,13 +1,63 @@
 /* People Gallery Page: */
 
-.people-wrapper {
+/* Universal styles: */
+
+// sections
+[class*="people__"] {
 	position: relative;
+	background-color: white;
 }
 
-/* Header: */
+// section titles
+[class*="people-"][class*="__title"] {
+	position: relative;
+	display: flex;
+	flex-flow: row nowrap;
+	width: 100%;
+	font-size: 2rem;
+	font-weight: 900;
+	line-height: 1;
+	text-transform: uppercase;
+	background-color: black;
+	div {
+		position: relative;
+		height: calc(2em - 6px);
+		margin-bottom: .5rem;
+		border-bottom: 4px solid hsla(186, 80%, 80%, 1);
+		&:first-of-type {
+			width: 24px;
+			margin-right: 12px;
+		}
+		&:last-of-type {
+			width: calc(100% - .25rem);
+			margin-left: .25rem;
+		}
+	}
+	span {
+		position: relative;
+		display: inline-block;
+		padding-top: 1em;
+	}
+	@media screen and (min-width: 768px) {
+		font-size: 3.5rem;
+	}
+	@media screen and (min-width: 1200px) {
+		font-size: 4.5rem;
+	}	
+}
 
-.people-page-header {
+// galleries
+[class*="people-"][class*="__gallery"] {
+	position: relative;
+	display: grid;
+	grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
+	justify-content: center;
+	padding-left: 2em;
+	padding-top: 2em;
+}
 
+.people-wrapper {
+	position: relative;
 }
 
 .people-header__big-title {
