--- a/assets/css/_sass/_people.scss
+++ b/assets/css/_sass/_people.scss
@@ -103,18 +103,12 @@
 .people-main-content {
 	position: relative;
 	padding: 0 4.167%;
-	@media screen and (min-width: 600px) {
-		padding: 0 8.33%;
-		padding-top: 3rem; // 2 line heights
-	}
+	background-color: black;
 	@media screen and (min-width: 768px) {
-		padding: 0 4.167%;
-		padding-top: 3rem; // 2 line heights
 		font-size: 1.125rem;
 	}
-	@media screen and (min-width: 1024px) {
-		padding: 0 8.33%;
-		padding-top: 3rem; // 2 line heights
+	@media screen and (min-width: 1200px) {
+		padding: 0 2em;
 	}
 }
 
