--- a/assets/css/_sass/_people.scss
+++ b/assets/css/_sass/_people.scss
@@ -154,14 +154,17 @@
 
 .people-item-wrapper {
 	position: relative;
-	margin-right: 1em;
-	margin-bottom: 1em;
+	margin-right: 2em;
+	margin-bottom: 2.5em;
 	a {
 		position: relative;
 		display: flex;
 		flex-flow: column nowrap;
 		width: 100%;
 		height: 100%;
+		line-height: 1;
+		text-decoration: none;
+		color: black;
 	}
 }
 
@@ -170,6 +173,7 @@
 .people-item__img {
 	position: relative;
 	max-width: 100%;
+	min-height: 176px;
 	img {
 		max-width: 100%;
 	}
@@ -178,11 +182,21 @@
 /* Name: */
 
 .people-item__name {
-
+	text-transform: uppercase;
+	font-weight: 900;
+	margin: 1em 0 .5em 0;
 }
 
 /* Position: */
 
 .people-item__position {
+	margin: 0;
+	padding: 0;
+	list-style-type: none;
+	li {
+		line-height: 1.125;
+	}
+
+}
 
 }
