--- a/assets/css/_sass/_people.scss
+++ b/assets/css/_sass/_people.scss
@@ -221,6 +221,36 @@
 
 }
 
+/* Students: */
+
+.people__students {
+
+}
+
+.people-students__title {
+	color: hsla(300, 90%, 90%, 1) !important;
+	div {
+		border-bottom: 4px solid hsla(300, 90%, 90%, 1) !important;
+	}
+}
+
+.people-students__gallery {
+
+}
+
+/* Alumni: */
+
+.people__alumni {
+	
+}
+
+.people-alumni__title {
+	color: hsla(230, 90%, 90%, 1) !important;
+	div {
+		border-bottom: 4px solid hsla(230, 90%, 90%, 1) !important;
+	}
+}
+
 .people-alumni__gallery {
 	a {
 		color: rgba(0,0,0,.7);
