Finishes lots o content...
Changes scholarship/research => “work” (#263), finishes Amanda going
through all static page text except as noted in open issues (#213)

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -12,7 +12,7 @@
       <div class="footer-map__title">Explore</div>
       <div class="footer-map__links">
         <a href="{{ site.url }}">Home</a>
-        <a href="{{ site.url }}/faq">FAQ</a>
+        <a href="{{ site.url }}/about">About</a>
         <a href="{{ site.url }}/hours-and-spaces">Hours & Spaces</a>
         <a href="{{ site.url }}/events">Events</a>
       </div>
