--- a/_layouts/work.html
+++ b/_layouts/work.html
@@ -2,19 +2,19 @@
 layout: no-header
 ---
 
-{% assign colors = site.data.research[page.slug] %}
+{% assign colors = site.data.work[page.slug] %}
 {% assign title_array = page.title | split: ' ' %}
 
 <article class="project-content-wrapper">
 	<div class="project-content__img">
-		<div><img src="{{ '/assets/img/research/' | append: page.banner-img | relative_url }}" alt="{{ page.title }}"></div>
+		<div><img src="{{ '/assets/img/work/' | append: page.banner-img | relative_url }}" alt="{{ page.title }}"></div>
 	</div>
 	<div class="project-content__title">
 		<span>{{ page.title | replace: ' - ', ': ' }}</span>
 	</div>
 	<div class="project-content__metadata" {% if title_array.size <= 2 %}style="flex-flow: column nowrap;"{% endif %}>
 		<div class="project-content__year"><span>Year:</span><div>{{ page.year }}</div></div>
-		<div class="project-content__category"><span>Project Type:</span><div>{{ page.research-category | replace: 'and', '&amp;' }}</div></div>
+		<div class="project-content__category">{% if page.research-category %}<span>Work type:</span><div>{{ page.research-category | replace: 'and', '&amp;' }}</div>{% endif %}</div>
 		<!--div class="project-content__cta"><a href="{{ page.link }}">Visit Project</a></div-->
 	</div>
 	<div class="project-content__text">{{ content }}</div>
