Import assets for new homepage from patterns repo
- Required:
1.) background image for title
2.) SCSS partials
	- new navbar
	- new homepage
	- color palettes

--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -20,9 +20,12 @@ main {
 
 /* Partials: */
 
+@import "_colors/slab-palette";
 @import "universal-styles";
 @import "home";
+@import "home-v2";
 @import "navbar";
+@import "navbar-2";
 // @import "amanda";
 @import "logos";
 @import "makerspace";
