Change link & button universal styles
    - Links:
      1.) set color to text gray using sass variable
      2.) set underline & highlight color to theme turquoise

    - Buttons:
      1.) remove line that increases font size to 1.5em on big screens

--- a/assets/css/_sass/_universal-styles.scss
+++ b/assets/css/_sass/_universal-styles.scss
@@ -17,7 +17,8 @@
 }
 
 // in-text links on pages specified below
-[class*="home-"],
+// v2 temporary! ////////////////////////
+[class*="home-"], [class*="v2-"],
 [class*="maker-"],
 [class*="post-"],
 [class*="person-"],
@@ -26,13 +27,13 @@
 		font-family: "Raleway", sans-serif;
 		font-weight: 700;
 		text-decoration: none;
-		color: black;
-		border-bottom: 2px solid magenta;
+		color: $textgray;
+		border-bottom: 2px solid hsla(186,80%,70%,1);
 		background-color: transparent;
 		-webkit-transition: background-color .3s;
 		transition: background-color .3s;
 		&:hover, &:focus {
-			background-color: magenta;
+			background-color: hsla(186,80%,70%,1);
 		}
 	}
 }
@@ -82,7 +83,7 @@
 	}
 	@media screen and (min-width: 1024px) {
 		a {
-			font-size: 1.5rem !important;
+	//		font-size: 1.5rem !important;
 		}
 	}
 }
