--- a/assets/css/_sass/_home.scss
+++ b/assets/css/_sass/_home.scss
@@ -1,325 +1,354 @@
-/* Homepage Styles: */
+/* Homepage, Version 2 */
 
-.home-landing-grid {
+html, body {
+	background-color: white;
+}
+/* ## Universal styles: */
+
+[class*="home-"][class*="__title"] {
+	font-size: 2em;
+	font-weight: bold;
+}
+
+[class*="home__"] {
+	position: relative;
+	margin: 1em;
+	padding: 1em;
+	border: 1px solid black;
+}
+
+/* ## Main styles: */
+
+.home-wrapper {
+	position: relative;
+	margin-top: -60px;
+	@media screen and (min-width: 768px) {
+		font-size: 1.125rem; // 18px
+	}
+}
+
+/* # Landing: */
+
+.home-landing-wrapper {
+	position: relative;
+}
+
+.home-landing__big-title {
+	position: relative;
+	height: calc(100vh + 1px);
+	width: 100%;
+	padding: 0 4.167%;
+	background-color: $navgray;
+//	border-bottom: 1px dotted rgba(255,255,255,.5);
+}
+
+.home-title__text {
 	position: relative;
 	display: grid;
-//	justify-content: start;
-	align-items: end;
-	overflow: hidden;
 	height: 100vh;
 	width: 100%;
-	padding-left: 4.167%;
-	@media screen and (min-width: 600px) {
-		padding-left: 8.33%;
-	}
-}
-
-.home-title-wrapper {
-	position: relative;
-	font-family: "Oswald", sans-serif;
-	font-size: 4em;
-	font-weight: 600;
+	align-items: center;
+	font-size: 3em;
+	font-weight: 900;
+	line-height: 1;
 	text-transform: uppercase;
-	line-height: .9;
-	.home-title__text {
-		position: relative;
+	color: white;
+	background-color: black;
+	mix-blend-mode: lighten;
+	&::before {
+		content: '';
+		position: absolute;
+		top: 0;
+		left: 0;
+		width: 100%;
+		height: 100%;
+		background-color: lightblue;
+		background-image: linear-gradient(rgba(255,255,255,.1), rgba(255,255,255,.1)), url('../img/decorative/color-splatter-purple.jpg');
+		background-size: cover;
+		mix-blend-mode: multiply;
 	}
-	/* NB: need to move placement of words on smaller screens */
-	@media screen and (min-width: 600px) {
+	span {
+		display: inline-block;
+	}
+	@media screen and (min-width: 768px) {
+		font-size: 4em;
+	//	padding-left: 2.25rem;
+	}
+	@media screen and (min-width: 1400px) {
 		font-size: 5em;
 	}
-	@media screen and (min-width: 768px) {
-		font-size: 6em;
-	}
-	@media screen and (min-width: 1024px) {
-		font-size: 7em;
-	}
-	border-bottom: 6px solid magenta;
 }
 
-.home-landing__subtitle {
+/* * * * ## Hero: * * * */
+
+.home-landing__hero-text {
 	position: relative;
+	display: grid;
 	width: 100%;
-	align-self: start;
-	text-transform: uppercase;
-	font-size: 1.5rem;
-	font-weight: 200;
-	line-height: 1;
-	padding-top: 1em;
-	@media screen and (min-width: 600px) {
-		font-size: 1.75rem;
-		padding-top: 1.5em;
-	}
-	@media screen and (min-width: 768px) {
-		font-size: 2rem;
-		padding-top: 0;
-		align-self: center;
-	}
-	@media screen and (min-width: 1024px) {
-		font-size: 2rem;
+	padding: 0 4.167%;
+	@media screen and (min-width: 1200px) {
+//		padding: 0 8.33%;
 	}
 }
 
-/* Main Content */
+[class*="home-hero__"] {
+	position: relative;
+	font-size: 1.67em; // 3/4 scale
+	line-height: 1.2;
+	color: $textgray;
+	margin: .6em;
+	margin-top: 0;
+	padding: 0 .6em;
+	h3 {
+		position: relative;
+		margin: 0;
+		font-size: 2.25rem;
+		font-weight: 900;
+		line-height: 1;
+		text-transform: uppercase;
+	}
+	p:first-of-type {
+		margin-top: .5em;
+	}
+}
+
+.home-hero__hook {
+	margin-top: 1.5em;
+	@media screen and (min-width: 1200px) {
+		width: 60%;
+	}
+}
+
+.home-hero__description {
+
+}
+
+/* * * * ## Main content: * * * */
 
 .home-main-content {
 	position: relative;
 	display: grid;
-	grid-template-columns: 1fr;
-	grid-template-areas: "hero"
-						 "faq"
+	grid-template-areas: "faq"
 						 "contact"
-						 "hours"
-						 "grads"
-						 "floor"
-						 "make"
-						 "gis"
-						 "learn"
+						 "find"
 						 "events"
-						 "blog"
-						 "contact2"
-						 "listserv"
-						 "people"
-						 "projects"
-						 "origins"
-						 "charter"
-						 "colophon";
+						 "hours"
+						 "students"
+						 "maker"
+						 "spatial";
 	padding: 0 4.167%;
-	padding-bottom: 3rem;
-	@media screen and (min-width: 600px) {
+	color: $textgray;
+	@media screen and (min-width: 1024px) {
 		grid-template-columns: 1fr 1fr;
-		grid-template-areas: "hero hero"
-							 "faq contact"
-							 "faq hours"
-							 "grads floor"
-							 "make gis"
-							 "learn learn"
-							 "events events"
-							 "blog contact2"
-							 "blog listserv"
-							 "people projects"
-							 "origins origins"
-							 "charter colophon";
-		grid-auto-rows: minmax(25vh, auto);
-		padding: 0 8.33%;
-		padding-bottom: 3rem;
+		grid-template-areas: "faq faq"
+							 "contact contact"
+							 "events find"
+							 "events hours"
+							 "students students"
+							 "spatial maker";
 	}
 }
 
-/* Hero: */
-
-.home__hero {
-	grid-area: hero;
-	position: relative;
-	padding: 1em 0;
-	font-size: 1rem;
-	font-weight: 900;
-	color: rgba(0,0,0,.5);
-//	background-image: linear-gradient(to bottom, black, rgba(0,0,0,.85));
-	@media screen and (min-width: 600px) {
-		font-size: 1.5rem;
-	}
-	@media screen and (min-width: 768px) {
-		font-size: 1.75rem;
-		line-height: 1.714; // 3rem
-	}
-}
-
-.home-hero__text {
-//	margin-bottom: 1em;
-//	padding-bottom: 1em;
-	span {
-	//	color: black;
-	}
-	position: relative;
-//	margin: 0 4.167%;
-//	font-family: "base-mono-narrow", monospace;
-	
-	p {
-		margin: 0;
-		padding-bottom: 1em;
-		&:first-of-type {
-			padding-top: 2em;
-		}
-	}
-	@media screen and (max-width: 767px) {
-		padding: 0 2em;
-		border: 2px solid magenta;
-	/*	&::before {
-			content: '';
-			position: absolute;
-			right: 33%;
-			top: 0;
-			display: block;
-			height: 3em;
-			width: 1.5em;
-			border-right: 2px solid magenta;
-			border-left: 2px solid magenta;
-			transform: translate(50%, -50%) skew(-45deg, 0);
-		} */
-	}
-}
-
-/* Contact prompt: */
-
-.home__contact--1 {
-	grid-area: contact;
-	@media screen and (min-width: 768px) {
-		font-size: 1.125rem;
-	}
-}
-
-.home-contact__cta {
-
-}
-
-/* FAQ corner/link: */
+/* FAQ: */
 
 .home__faq {
 	grid-area: faq;
-	padding-right: 0;
-	@media screen and (min-width: 600px) {
-		padding-right: 8.33%;
-	}
-	@media screen and (min-width: 768px) {
-		font-size: 1.125rem;
-	}
 }
 
-.home-faq__content {
+.home-faq__title {
 
-}
-
-.home-faq__subtitle {
-	padding-bottom: 1em;
 }
 
 .home-faq__questions {
-	position: relative;
-	font-family: "base-mono-narrow", monospace;
-	div {
-		position: relative;
-		margin-bottom: 1em;
-		&::before {
-			content: '';
-			position: absolute;
-			left: -12px;
-			top: 50%;
-			transform: translate(0, -50%);
-			display: block;
-			height: 6px;
-			width: 6px;
-		//	background-color: hsla(186,80%,70%,1);
-			border-radius: 50%;
 
-		}
-		a {
-			line-height: 1.5;
-			text-decoration: none;
-			color: black;
-			border-bottom: 2px solid hsla(186,80%,70%,1);
-			background-color: transparent;
-			-webkit-transition: background-color .3s;
-			transition: background-color .3s;
-			&:hover, &:focus {
-				background-color: hsla(186,80%,70%,1);
-			}
-		}
-	}
+}
+
+.home-faq__charter {
+
+}
+
+.home-charter__title {
+
+}
+
+.home-charter__content {
+
+}
+
+.home-faq__people {
+
+}
+
+.home-people__title {
+
+}
+
+.home-people__content {
+
 }
 
 .home-faq__cta {
-	position: relative;
-	margin-top: 1em;
+
 }
 
-/* Grad students: */
+/* Contact us: */
 
-.home__students {
-	grid-area: grads;
-	padding-right: 0;
-	a {
-		border-bottom: 2px solid rgba(0,47,255,1);
-		&:hover, &:focus {
-			background-color: rgba(0,47,255,1);
-		}
-	}
-	@media screen and (min-width: 600px) {
-		padding-right: 8.33%;
-	}
-	@media screen and (min-width: 768px) {
-		font-size: 1.125rem;
-	}
+.home__contact {
+	grid-area: contact;
 }
 
-.home-students__cta {
-	a {
-		color: rgba(0,47,255,1);
-		border: 2px solid rgba(0,47,255,1);
-		&:hover, &:focus {
-			background-color: transparent;
-		}
-	}
+.home-contact__title {
+
 }
 
-/* Floor diagram: (esp for office hours) */
-
-.home__floor-diagram {
-	grid-area: floor;
+.home-contact__wrapper {
 	position: relative;
 	display: flex;
+}
+
+.home-contact__content {
+
+}
+
+.home-contact__newsletter {
+
+}
+
+.home-news__text {
+
+}
+
+.home-news__prompt {
+
+}
+
+.home-listserv__input {
+
+}
+
+.home-listserv__btn {
+
+}
+
+.home-contact__email {
+
+}
+
+.home-contact__consult {
+
+}
+
+/* Find us: */
+
+.home__find-us {
+	grid-area: find;
+}
+
+.home-find__title {
+
+}
+
+.home-find__content {
+	position: relative;
+	display: flex;
+}
+
+.home-find__diagram {
+
+}
+
+/* Events: */
+
+.home__events {
+	grid-area: events;
+}
+
+.home-events__title {
+
+}
+
+.home-events__upcoming {
+	display: flex;
 	flex-flow: column nowrap;
-	justify-content: flex-start;
-	font-size: 1.75rem;
+	align-items: center;
 	div {
-		img {
-			display: inline-block;
-			margin-top: 1em;
-		}
-	}
-	@media screen and (min-width: 600px) {
-		flex-flow: row nowrap;
-		justify-content: space-between;
-		font-size: 2rem;
+		height: 200px;
+		width: 100%;
+		background-color: rgba(0,0,0,.15);
+		border: rgba(0,0,0,.5);
+		margin-top: 1em;
 	}
 }
 
-/* Office hours: */
+/* Open office hours: */
 
 .home__office-hours {
 	grid-area: hours;
-	padding-right: 0;
-	@media screen and (min-width: 600px) {
-		padding-right: 8.33%;
-	}
-	@media screen and (min-width: 768px) {
-		font-size: 1.125rem;
-	}
+}
+
+.home-hours__title {
+
 }
 
 .home-hours__when {
-	font-family: "base-mono-narrow";
-	font-size: 20px;
-	line-height: 24px; // 1.5rem;
-	margin-bottom: 24px;
+
 }
 
-/* Makerspace corner: */
+.home-hours__info {
 
-.home__makerspace-corner {
-	grid-area: make;
-	padding-right: 0;
-	@media screen and (min-width: 600px) {
-		padding-right: 8.33%;
-	}
-	@media screen and (min-width: 768px) {
-		font-size: 1.125rem;
-	}
 }
 
-.home-makerspace__hours {
+/* Student Opportunities: */
+
+.home__student-opps {
+	grid-area: students;
 	position: relative;
-	border: 4px solid magenta;
+	display: grid;
+	grid-template-columns: 3fr 2fr;
+	max-width: 100%;
+}
+
+.home-student__content {
+	
+}
+
+.home-student__title {
+
+}
+
+.home-student__text {
+	display: inline-block;
+	p {
+
+	}
+}
+
+.home-student__img {
+	position: relative;
+	background-image: url('../img/makerspace/doge-print.jpg');
+	background-size: 150%;
+	background-position: left bottom;
+}
+
+.home-student__cta {
+	position: absolute;
+	bottom: 0;
+	left: 0;
+}
+
+/* Makerspace: */
+
+.home__makerspace {
+	grid-area: maker;
+}
+
+.home-maker__title {
+
+}
+
+.home-maker__hours {
+	position: relative;
+	border: 4px solid $brightgrape;
 	font-family: "base-mono-narrow", monospace;
 	font-size: 20px;
 	text-align: right;
@@ -337,97 +366,28 @@
 	}
 	span {
 		float: left;
-		color: magenta;
+		color: $brightgrape;
 	}
 }
 
-.home-makerspace__text {
-	margin-top: 1.5rem;
+.home-maker__text {
+
 }
 
-.home-makerspace__cta {
-	a {
-		border-color: magenta !important;
-		color: magenta !important;
-	}
+.home-maker__cta {
+
 }
 
-/* GIS corner: */
+/* Spatial Tech: */
 
-.home__gis-corner {
-	grid-area: gis;
-	padding-left:  0;
-	@media screen and (min-width: 600px) {
-		padding-left: 8.33%;
-	}
-	@media screen and (min-width: 768px) {
-		font-size: 1.125rem;
-	}
+.home__spatial-tech {
+	grid-area: spatial;
 }
 
-/* Starter kit corner: */
+.home-spatial__title {
 
-.home__learn {
-	grid-area: learn;
 }
 
-/* Events & get involved prompt: */
+.home-spatial__text {
 
-.home__events {
-	grid-area: events;
-}
-
-/* Listserv sign-up: */
-
-.home__listserv-prompt {
-	grid-area: listserv;
-}
-
-.home-listserv__text {
-	padding: 1em 0;
-	font-weight: 900;
-	text-transform: uppercase;
-	color: rgba(0,0,0,.5);
-}
-
-/* Second direct contact: */
-
-.home__contact--2 {
-	grid-area: contact2;
-}
-
-/* People: */
-
-.home__people {
-	grid-area: people;
-}
-
-/* Blog corner: */
-
-.home__blog {
-	grid-area: blog;
-}
-
-/* Origin stories: */
-
-.home__origin-stories {
-	grid-area: origins;
-}
-
-/* Projects corner: */
-
-.home__staffer-projects {
-	grid-area: projects;
-}
-
-/* Charter: */
-
-.home__charter-link {
-	grid-area: charter;
-}
-
-/* Colophon */
-
-.home__colophon {
-	grid-area: colophon;
 }
