Update universal selectors to reflect updated class names

--- a/assets/css/_sass/_universal-styles.scss
+++ b/assets/css/_sass/_universal-styles.scss
@@ -1,7 +1,6 @@
 /* Universal Styles: */
 
 // section titles
-[class*="__title"][class*="home-"],
 [class*="__title"][class*="spatial-"],
 [class*="__title"][class*="research-"] {
 	margin-bottom: .5em;
@@ -17,8 +16,7 @@
 }
 
 // in-text links on pages specified below
-// v2 temporary! ////////////////////////
-[class*="home-"], [class*="v2-"],
+[class*="home-"],
 [class*="maker-"],
 [class*="post-"],
 [class*="person-"],
