--- a/_includes/navbar-old.html
+++ b/_includes/navbar-old.html
@@ -1,7 +1,8 @@
-<div class="flexnav-wrapper--2">
-	<div class="flexnav-main--2">
-		<div class="flexnav__home-icon">
-			<a href="{{ site.url }}" aria-label="Scholars' Lab home"><img src="{{ '/assets/img/svg/8bit-beaker.svg' | relative_url }}" alt="Beaker by Cuby Design for the Noun Project" title="Courtesy of Cuby Design"></a>
+<div class="navbar-wrapper">
+	<div class="navbar-main-grid">
+
+		<div class="navbar__home-icon">
+			<a href="{{ site.url }}" aria-label="Scholars' Lab home"><img src="{{ '/assets/img/svg/slab-logo-color-white.svg' | relative_url }}" alt="SLab logo"></a>
 		</div>
 
 		<ul class="flexnav-main-grid">
@@ -22,5 +23,6 @@
 				</ul>
 			</li>
 		</ul>
+
 	</div> <!-- end content -->
 </div> <!-- end wrapper -->
