Rename navbar-2 partial -> 'navbar'; adjust import accordingly

--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -23,7 +23,7 @@ main {
 @import "_colors/slab-palette";
 @import "universal-styles";
 @import "home";
-@import "navbar-2";
+@import "navbar";
 // @import "amanda";
 @import "logos";
 @import "makerspace";
