Add '--js' suffix to navbar classes used in JS files
- Did use traditional 'js-' namespacing for a sec, but it looked
  really weird w/ class names that had other '-' in them

--- a/assets/css/_sass/_navbar.scss
+++ b/assets/css/_sass/_navbar.scss
@@ -132,11 +132,11 @@ ul[class*="flexnav"] {
 
 /* Classes for JS: */
 
-.hidden {
+.hidden--js {
 	display: none;
 }
 
-.show-more-menu {
+.show-more-menu--js {
 	display: initial;
 	opacity: 1;
 }
